--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-1.96MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇨🇳 中国-11.39MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-7.86MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-986.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-2.45MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-859.5KB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-842.6KB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-4.30MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.86MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-992.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-5.40MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: gnailiad.gq, port: 59484, type: vmess, uuid: f377c443-b6a5-40ef-c52c-a0ba721805ff, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-729.0KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇨🇳 中国-310.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇰🇷 韩国-3.41MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.86MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-986.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-859.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-842.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
