--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-4.30MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.86MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-992.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-5.40MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: gnailiad.gq, port: 59484, type: vmess, uuid: f377c443-b6a5-40ef-c52c-a0ba721805ff, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-729.0KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇨🇳 中国-310.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇰🇷 韩国-3.41MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-253.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-173.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇨🇳 中国-158.7KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.253, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-899.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-973.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-823.7KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇸🇬 新加坡-1.84MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-4.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-729.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
